@@ -176,6 +176,8 @@ BOOL LIBNXDB_EXPORTABLE DBBegin(DB_HANDLE hConn);
 BOOL LIBNXDB_EXPORTABLE DBCommit(DB_HANDLE hConn);
 BOOL LIBNXDB_EXPORTABLE DBRollback(DB_HANDLE hConn);
 
+int LIBNXDB_EXPORTABLE DBIsTableExist(DB_HANDLE conn, const TCHAR *table);
+
 int LIBNXDB_EXPORTABLE DBGetSchemaVersion(DB_HANDLE conn);
 int LIBNXDB_EXPORTABLE DBGetSyntax(DB_HANDLE conn);
 
