@@ -8,6 +8,7 @@
 - Instance display name for DCIs created via instance discovery
 - DCIs created via instance discovery can be combined by instance into one chart on performance tab
 - Transformation script terminated by "abort" call will not generate SYS_SCRIPT_ERROR event
+- Database manager can detect and fix missing IData and TData tables
 - NXSL:
    - String concatenation operation interprets NULL value as empty string instead of throwing runtime error
    - Fixed incorrect processing of ilike, match, and imatch operators
